@@ -120,8 +120,8 @@ mjb.playFullBluRayDisk=true
 
 # These are the scanner tokens. You should not really need to change these unless you need specific integration with third party applications
 mjb.scanner.fanartToken=.fanart
-mjb.scanner.bannerToken=.banner
 mjb.scanner.posterToken=_large
+mjb.scanner.bannerToken=.banner
 mjb.scanner.thumbnailToken=_small
 mjb.scanner.videoimageToken=.videoimage
 # Use this value to add part of the path string(the number of upper folders) hash to the basename for generated files
@@ -320,6 +320,9 @@ poster.scanner.coverArtExtensions=jpg,jpeg,gif,bmp,png,tbn
 # This is really intended for use with TV series.
 poster.scanner.useFolderImage=false
 
+# This is the basename of the image to use from the folder. If useFolderImage=true then this additional file will be searched for
+poster.scanner.imageName=folder,poster
+
 # Specifies a prioritised list of movie poster searches to look for a poster
 # Each search is tried in turn until a valid poster URL is found.
 poster.scanner.SearchPriority.movie=moviedb,impawards,imdb,moviecovers,google,yahoo,motechnet
@@ -353,6 +356,22 @@ poster.scanner.google.Validate=true
 # then this will use this for fanart for ALL videos in that folder
 # This is really intended for use with TV series or single movie per folder setups
 fanart.scanner.useFolderImage=false
+
+# This is the basename of the image to use from the folder. If useFolderImage=true then this additional file will be searched for
+fanart.scanner.imageName=fanart,backdrop,background
+
+################################################################
+## Banner scanner
+
+# Specifies if the banner scanner should look for and use folder banner files if found. 
+# Warning: if you have and of these in your directory then this will use this for banner 
+# artwork for ALL videos in that folder
+# This is really intended for use with TV series or single movie per folder setups
+banner.scanner.useFolderImage=false
+
+# This is a list of the comma separated basenames to search for in the folder. 
+# If banner.scanner.useFolderImage=true then this additional file will be searched for
+banner.scanner.imageName=banner
 
 ################################################################
 ## Boxed Sets parameters
